# fish_reader

./: .gitignore  QWEN.md  README.md  pyproject.toml
src/fish/: __main__.py  book_manager.py  config.py  floating_window.py  main.py  theme_manager.py
